fixed add task button mobile

--- a/styles/addtask.css
+++ b/styles/addtask.css
@@ -2,8 +2,8 @@ main {
     display: flex;
     flex-direction: column;
     position: relative;
-    padding-bottom: 100px;
-    overflow: scroll;
+    /* padding-bottom: 100px; */
+    overflow: auto;
     font: inherit;
 }
 
@@ -289,18 +289,18 @@ main {
 
 
 
-.urgent { 
-    background-color: #FF3D00 !important; 
+.urgent {
+    background-color: #FF3D00 !important;
     color: white;
 }
 
-.medium { 
-    background-color:  #FFA800 !important; 
+.medium {
+    background-color: #FFA800 !important;
     color: white;
 }
 
-.low { 
-    background-color:  #7AE229 !important; 
+.low {
+    background-color: #7AE229 !important;
     color: white;
 }
 
@@ -431,9 +431,10 @@ main {
     width: 440px;
     height: 110px;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     gap: 5px;
     margin-top: 5px;
+    overflow-x: hidden;
 }
 
 .subtasks-list-entry {
@@ -442,13 +443,14 @@ main {
     justify-content: space-between;
     border-radius: 10px;
     cursor: pointer;
+    padding-right: 8px;
 }
 
 .subtasks-list-entry li {
     display: list-item;
-    height: 50px;
+    /* height: 50px; */
     padding-left: 30px;
-    padding-top: 7px;
+    /* padding-top: 7px; */
 }
 
 .subtasks-list-entry li input {
@@ -465,7 +467,7 @@ main {
 
 #subtaskEditInput {
     border-radius: 10px;
-    padding-left: 10px;
+    /* padding-left: 10px; */
     height: 25px;
 }
 
@@ -566,14 +568,6 @@ main {
     box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.1);
 }
 
-
-
-
-
-
-
-
-
 @media (max-width: 1400px) {
     .task-form {
         padding-left: 25pxpx;
@@ -596,11 +590,18 @@ main {
     }
 }
 
+@media (min-width: 1101px) {
+    .mobile-button {
+        display: none;
+    }
+}
+
 @media (max-width: 1100px) {
 
     main {
         padding: 0;
         height: calc(100vh - 380px);
+        flex-grow: 0;
     }
 
     .mobile-button {
@@ -610,6 +611,11 @@ main {
         justify-content: center;
         align-items: center;
         padding: 10px;
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 80px;
+        background-color: var(--background);
     }
 
     .buttons {
@@ -651,13 +657,13 @@ main {
     .title {
         display: none;
     }
-    
+
     .mobile-title {
         display: flex;
         justify-content: center;
         align-items: center;
         padding-top: 30px;
-        padding-left: 0;
+        padding-left: 16px;
     }
 
     .addTasksButtons {
@@ -668,7 +674,7 @@ main {
 
 
 @media (max-width: 500px) {
-    
+
     main {
         padding: 0;
         height: calc(100vh - 345px);
@@ -676,6 +682,7 @@ main {
 
     .task-form {
         padding-top: 0;
+        flex-grow: 1;
     }
 
     .task-form-container {
@@ -685,7 +692,7 @@ main {
     .mobile-title {
         font-size: 51px;
         padding-top: 25px;
-        padding-left: 0px;
+        padding-left: 16px;
         padding-bottom: 25px;
     }
 
