--- a/styles/help.css
+++ b/styles/help.css
@@ -1,3 +1,8 @@
+h1,
+h2 {
+  margin: 0;
+}
+
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -8,6 +13,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.headline h1 {
+  margin-bottom: 16px;
 }
 
 .headline img {
